--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,5 +3,9 @@ body{
 }
 
 .bg-color{
-    background-color: rgb(0, 205, 130);
+    background-color: #00cd82;
+}
+
+.card-color{
+    background-color: #00cd82;
 }
